--- a/HACKING
+++ b/HACKING
@@ -8,31 +8,7 @@ img2pdf can be run directly from the cloned git repository:
 Running the testsuite
 ---------------------
 
-    $ python3 setup.py test
-    $ ./test.sh
-
-Fixing the setup.py testsuite
------------------------------
-
-Sometimes your changes will break the testsuite. The testsuite works by
-comparing the images found in `src/tests/input` with the corresponding PDF
-documents in `src/tests/output`. The filename of the output file will be the
-same name the input has with the `.pdf` suffix appended to it. To generate the
-files in the `src/tests/output` directory via the command line, run:
-
-    $ src/img2pdf.py --producer="" --nodate src/tests/input/normal.jpg -o src/tests/output/normal.jpg.pdf
-
-This makes it easier to spot where the differences are and how to fix the
-issue.
-
-Fixing the test.sh testsuite
-----------------------------
-
-If your changes break test.sh, then the script will abort immediately and tell
-you where it left the temporary files for you to inspect. You can also try
-running the script like this for maximum verbosity:
-
-    $ sh -x ./test.sh
+    $ pytest
 
 Making a new release
 --------------------
